--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mp</groupId>
-  <artifactId>PracticeDemo</artifactId>
+  <artifactId>practicedemo</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -61,7 +61,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>JavaWebTest</finalName>
+    <finalName>practicedemo</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
