--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
       <artifactId>logback-classic</artifactId>
       <version>1.1.2</version>
     </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.2</version>
+      </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.4</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>practicedemo</finalName>
